--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -58,15 +58,16 @@
     Sign Up
   </button>
 
-<!--  <button type="button"
+<!--  TODO implement 'Password forgotten' and 'Update User (for changing the password)'
+  <button type="button"
           class="btn"
           (click)="updateUser()">
-    Password forgotten (TODO Delete?)
-  </button> &lt;!&ndash; TODO Move somewhere else &ndash;&gt;
+    Password forgotten
+  </button>
 
   <button type="button"
           class="btn"
           (click)="updateUser()">
-    Change Password (TODO Delete?)
+    Change Password
   </button> -->
 </form>
