--- a/src/app/create-network-switching/create-network-switching.component.html
+++ b/src/app/create-network-switching/create-network-switching.component.html
@@ -191,12 +191,14 @@
         </div>
       </div>
     </div>
-    <button class="btn btn-default"
-            type="button"
-            (click)="goBack()">Back</button>
-    <button class="btn btn-success"
-            type="submit"
-            [disabled]="(!sourceIpAddr.valid && !sourceHost.valid) || (!destinationHost.valid && !destinationIpAddr.valid)"
-            (click)="save()">Save</button>
+    <div class="form-group">
+      <button class="btn btn-default"
+              type="button"
+              (click)="goBack()">Back</button>
+      <button class="btn btn-success"
+              type="submit"
+              [disabled]="(!sourceIpAddr.valid && !sourceHost.valid) || (!destinationHost.valid && !destinationIpAddr.valid)"
+              (click)="save()">Save</button>
+    </div>
   </form>
 </div>
