- wrong id in 'label for' used - unsubscribing from observables (where needed) - handle invalid date entries where the user does not support a proper date time widget yet

--- a/src/app/edit-network-switching/edit-network-switching.component.html
+++ b/src/app/edit-network-switching/edit-network-switching.component.html
@@ -36,7 +36,7 @@
                 </select>
               </div>
               <div class="form-group">
-                <label class="networkswitch-label" for="destination-zone">System:</label>
+                <label class="networkswitch-label" for="systemEnvironment">System:</label>
                 <select class="form-control"
                         [ngClass]="nwsw.getSystemEnvironmentCssClass()"
                         [(ngModel)]="nwsw.systemEnvironment"
